# humanoid_wb_mpc

./: .gitmodules  README.md
humanoid_wb/: CMakeLists.txt  package.xml
humanoid_wb/config/control/: impedance_gains_simulation.info
humanoid_wb/config/mpc/: reemc_task.info  reemc_task_new.info
humanoid_wb/include/humanoid_wb/: HumanoidWbInterface.h  HumanoidWbPreComputation.h  package_path.h.in
humanoid_wb/src/: HumanoidWbInterface.cpp  HumanoidWbPreComputation.cpp
humanoid_wb/src/common/: ModelSettings.cpp
humanoid_wb/src/constraint/: CoordinateVelocityConstraintCppAd.cpp  EndEffectorConstraint.cpp  EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  UnilateralConstraint.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
humanoid_wb/src/cost/: HumanoidWbStateInputQuadraticCost.cpp
humanoid_wb/src/dynamics/: HumanoidWbDynamicsAD.cpp
humanoid_wb/src/foot_planner/: ArmSwingTrajectoryPlanner.cpp  CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
humanoid_wb/src/gait/: Gait.cpp  GaitSchedule.cpp  ModeSequenceTemplate.cpp
humanoid_wb/src/initialization/: HumanoidWbInitializer.cpp
humanoid_wb/src/interaction/: AdmittanceReferenceGenerator.cpp  ForceControl.cpp
humanoid_wb/src/reference_manager/: SwitchedModelReferenceManager.cpp
humanoid_wb/test/: HumanoidWbFactoryFunctions.cpp  HumanoidWbUrdf.h  testHumanoidWbEndEffectorKinematics2.cpp
humanoid_wb/test/constraint/: testEndEffectorLinearConstraint.cpp  testFrictionConeConstraint.cpp  testZeroForceConstraint.cpp
humanoid_wb_ros/: CMakeLists.txt  package.xml
humanoid_wb_ros/launch/: multiplot.launch  reemc_ddp.launch  reemc_sqp.launch
humanoid_wb_ros/rviz/: reemc.rviz
humanoid_wb_ros/src/: HumanoidWbArmTarget.cpp  HumanoidWbDdpMpcNode.cpp  HumanoidWbDummyNode.cpp  HumanoidWbGaitCommandNode.cpp  HumanoidWbPoseCommandNode.cpp  HumanoidWbSqpMpcNode.cpp
humanoid_wb_ros/src/gait/: GaitAndTargetTrajectoriesInteractiveMarker.cpp  GaitKeyboardPublisher.cpp  GaitReceiver.cpp
humanoid_wb_ros/src/sensing/: EstimatedWrenchReceiver.cpp  JointStatesReceiver.cpp
humanoid_wb_ros/src/xbot2/: CMakeLists.txt  (+2 more)
(+50 files in other folders)
