<?xml version="1.0"?>
<package format="2">
  <name>humanoid_wb</name>
  <version>0.0.1</version>
  <description>The humanoid_wb package</description>

  <maintainer email="wcthibau@uwaterloo.ca">Will Thibault</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_robotic_assets</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>pinocchio</depend>
  <depend>ocs2_self_collision</depend>
  <depend>base_estimation</depend>
  <!-- <depend>reemc_description</depend> -->
  <depend>humanoid_assets</depend>
</package>
